# ai-app-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  main.py  pyproject.toml  pytest.ini  requirements.txt  vercel-ignore.sh
__tests__/routers/: __init__.py  test_openai.py
__tests__/utils/: test_openai.py
models/: user.py
routers/: auth.py  openai.py  redis.py  sql.py  users.py
schemas/: auth.py  openai.py  user.py
scripts/: docker-build.dev.template.sh
security/: auth.py  oauth2.py
services/: user.py
utils/: auth.py  env.py  openai.py  redis.py  sql.py
